manifests/prod/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: api-service
  namespace: cloudstream-prod

spec:
  replicas: 2

  selector:
    matchLabels:
      app: api-service

  template:
    metadata:
      labels:
        app: api-service
        azure.workload.identity/use: "true"

    spec:
      serviceAccountName: api-sa

      containers:
      - name: api-service
        image: cloudstreamacrshivani001.azurecr.io/api-service:v10
        imagePullPolicy: Always

        ports:
        - containerPort: 3000

        volumeMounts:
        - name: secrets-store-inline
          mountPath: /mnt/secrets-store
          readOnly: true

      volumes:
      - name: secrets-store-inline
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: azure-kv-secrets
